# blake3

./: .gitignore  CHANGELOG.md  mix.exs
lib/blake3/: native.ex
native/blake3/: Cargo.toml
native/blake3/src/: lib.rs
native/blake3nif/: Cargo.toml
native/blake3nif/src/: lib.rs
