[package]
name = "blake3nif"
version = "1.0.3"
edition = "2024"

[features]
default = ["blake3/default", "blake3/rayon"]
neon = ["blake3/neon"]
rayon = ["blake3/rayon"]

[lib]
name = "blake3nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37"
rustler_codegen = "0.37"
bincode = "2.0"
blake3 = "1.8" # Crate
